2003-05-06  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c (recalc_ruler_pos): Take care of ruler in 'set view map'
	splot.

2003-05-04  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/datafile.c: Fixed #define is_comment(c): strchr(s,c) returns
	!NULL for c=0.

2003-05-03  Ethan Merritt <merritt@u.washington.edu>

	* term/mif.trm: Implement support for filled boxes, pattern fill
	and for PM3D filled polygons.

2003-05-01  Ethan Merritt <merritt@u.washington.edu>

	* term/pdf.trm: Remove limit of 4 vertices in fill_polygon().

2003-04-30  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Say that the either of `set datafile commentschars`
	characters must be the first non-blank blank character on the line.

2003-04-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/datafile.c src/datafile.h src/save.c
	src/set.c src/show.c src/syscfg.h src/unset.c: New option 'set datafile
	commentschars'.

2003-04-24  Ethan Merritt <merritt@u.washington.edu>

	* term/post.trm: The postscript terminal driver now implements
	pattern-fill via a (Level 1) PostScript subroutine rather than via
	a loop in the driver-level C code. Thanks to Dick Crawford.

	* src/bitmap.c src/gplt_x11.c src/win/wgraph.c 
	term/emf.trm term/gd.trm term/pdf.trm:
	Bring all terminal types that support pattern-fill into agreement
	about the order of patterns. The patterns have been chosen for
	maximum contrast in mono plots, and to favor symmetric patterns
	over diagonal lines that are hard to describe in figure captions.

	Pattern fill support is now uniform for the following terminals
		epslatex
		gd (png jpeg)
    		bitmap (pbm epson hp500c hpljii hppj)
    		pdf
		postscript
		pslatex
		windows
		x11
	Not implemented but probably should be
		eepic
		emf

2003-04-24  Ethan Merritt <merritt@u.washington.edu>

	* src/win/wgraph.c: Tweak previous correction to saved pen color
	so that it applies cleanly to box fill as well.
